--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,12 @@ services:
       dockerfile: node.dockerfile
     ports:
       - "8080:8080"
-      - "444:444"
     depends_on:
       - postgres-db
     networks:
       - my-network
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=.env
     volumes:
       - ./:/app/
 
